--- a/bors.toml
+++ b/bors.toml
@@ -1,8 +1,9 @@
-status = ["Build mathlib", "Lint mathlib", "Run tests", "Lint style"]
-pr_status = ["Build mathlib", "Lint mathlib", "Run tests", "Lint style"]
+# status = ["Build mathlib", "Lint mathlib", "Run tests", "Lint style"]
+# pr_status = ["Build mathlib", "Lint mathlib", "Run tests", "Lint style"]
 # if you want to use bors in an external fork of mathlib,
 # comment out the first line and uncomment the line below
-# status = ["Build mathlib (fork)", "Lint mathlib (fork)", "Run tests (fork)", "Lint style (fork)"]
+status = ["Build mathlib (fork)", "Lint mathlib (fork)", "Lint style (fork)"]
+pr_status = ["Build mathlib (fork)", "Lint mathlib (fork)", "Lint style (fork)"]
 use_squash_merge = true
 timeout_sec = 28800
 prerun_timeout_sec = 28800
